# ROS2_AUTODRIVING

./: .gitignore  180wind.csv  =5.3.1  FGM 튜닝 결과.txt  FGM 튜닝 절차 및 실행법.txt  MPC parameter.txt  MPC추가 설치명령어.txt  analyze_fgm_logs.ipynb  analyze_fgm_scoring.ipynb  analyze_frenet_logs.ipynb  analyze_frenet_logs.py  bumper.csv  bumper_opponent_scenario v=1.5.csv  bumper_opponent_scenario v=1.csv  bumper_opponent_scenario v=2.csv  bumper_slow_0.5.csv  bumper_slow_1.5.csv  bumper_slow_1.csv  bumper_slow_2.csv  bumper_v_2.csv  bumper_v_3.csv  bumper_v_4.csv  bumper_v_5.csv  fgm_batch_run.sh  frenet_batch_run.sh  key_drive.py  kill_fgm_hole.csv  kill_fgm_tunnel.csv  lefthandling.csv  mpc 파라미터.txt  mux_batch_run.sh  mymap_config.txt  opp_teleop_traj1.csv  opp_teleop_traj2.csv  optimal_raceline.csv  optimal_raceline_config.txt  optimal_raceline_debugwithspeed.py  optimal_raceline_dubug.py  optimal_racelineasdf.csv  path_2_optimized.csv  (+15 more)
experiment_logs/: scenario_MUX_1764926339_ABORT_dur_107.61s.csv
logs/: 180_FGM_20251203_151238.csv  180_FGM_20251203_151856.csv  180_FGM_20251203_152201_time_22.22s.csv  180_FGM_20251203_152623_time_21.53s.csv  180_FGM_20251203_152825_time_19.16s.csv  180_FGM_20251203_152957_time_21.25s.csv  180_FGM_20251203_153251_time_20.25s.csv  180_FGM_20251203_153655_time_21.40s.csv  180_FGM_20251203_153858_time_20.28s.csv  180_FGM_20251203_154230_time_20.22s.csv  180_FGM_balanced_20251203_163455_time_20.21s.csv  180_FGM_race_20251203_163725_time_19.44s.csv  180_FGM_safe_20251203_163326_time_21.23s.csv  F1max_speed 4.5safe_curv 1.0 spielberg_FRENET_20251203_024750.csv  Mux_Spielberg_WS0.5_WT0.5_WC1.0_WCL2.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764868392_ABORT_dur_2.33s.csv  Mux_Spielberg_WS0.5_WT0.5_WC2.0_WCL0.5_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764868401_ABORT_dur_2.87s.csv  Mux_Spielberg_WS0.5_WT2.0_WC0.5_WCL0.5_WD0.5_Opp_bumper_slow_1.csv_MUX_RACING_1764868380_ABORT_dur_2.96s.csv  Mux_Spielberg_WS0.8841_WT1.3866_WC0.8504_WCL1.3767_WD1.0629_DM0.2115_Opp_bumper_slow_1.csv_MUX_RACING_1765025335_ABORT_dur_26.43s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_DM1.0_Opp_bumper_slow_1.csv_MUX_RACING_1765019216_GOAL_dur_74.86s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_DM1.0_Opp_bumper_slow_1.csv_MUX_RACING_1765020027_GOAL_dur_75.65s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_DM1.0_Opp_bumper_slow_1.csv_MUX_RACING_1765021050_GOAL_dur_74.86s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_DM1.0_Opp_bumper_slow_1.csv_MUX_RACING_1765023322_GOAL_dur_74.24s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764868360_ABORT_dur_2.95s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764929312_CRASH_dur_0.00s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764929573_CRASH_dur_0.01s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764929788_GOAL_dur_74.41s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764930233_GOAL_dur_74.30s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764933291_GOAL_dur_75.76s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764933573_CRASH_dur_17.10s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764934000_GOAL_dur_75.66s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764934157_GOAL_dur_75.32s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764934566_ABORT_dur_0.36s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764934602_GOAL_dur_76.25s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764934982_GOAL_dur_76.34s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764935370_GOAL_dur_75.36s.csv  Mux_Spielberg_WS1.0_WT1.0_WC1.0_WCL1.0_WD1.0_Opp_bumper_slow_1.csv_MUX_RACING_1764935541_GOAL_dur_3.89s.csv  (+477 more)
src/f1tenth_planner/: CMakeLists.txt  package.xml
src/f1tenth_planner/launch/: fgm.launch.py  fgm_with_pp.launch.py  fgm_with_pp_profile.launch.py  planner_launch.py
src/f1tenth_planner/src/: fgm_node.cpp  offline_planner.cpp  pure_pursuit_node.cpp
src/mpc_controller/: CMakeLists.txt  package.xml
src/mpc_controller/include/mpc_controller/: dynamic_model.hpp  mpc_solver.hpp
src/mpc_controller/src/: dynamic_model.cpp  mpc_node.cpp  mpc_solver.cpp
src/planner_mux/: CMakeLists.txt  CMakeLists.txt:Zone.Identifier  package.xml
src/planner_mux/launch/: time_trial.launch.py  time_trial_mux.launch.py
src/planner_mux/msg/: MuxStatus.msg
src/planner_mux/src/: planner_mux_node.cpp
src/racecar_dwa_cpp/: CMakeLists.txt  package.xml
src/racecar_dwa_cpp/config/: dwa_params.yaml
src/racecar_dwa_cpp/launch/: dwa_local_planner.launch.py
src/racecar_dwa_cpp/src/: dwa_local_planner.cpp
src/racecar_experiments/: CMakeLists.txt  package.xml
src/racecar_experiments/launch/: auto_map.launch.py  experiment_logger.launch.py  fgm_auto_map.launch.py  fgm_auto_run.launch.py  frenet_auto_run.launch.py  mux_auto_map.launch.py  mux_auto_run.launch.py  oppenet_recorder.launch.py  opponent_replay.launch.py
src/racecar_experiments/src/: avoid_logger.cpp  collision_monitor.cpp  mux_logger.cpp  opponent_pure_pursuit_node.cpp  opponent_replay_node.cpp  opponent_trajectory_recorder.cpp  oppteleop_recorder.cpp  path_saver.cpp  path_timer.cpp  run_logger.cpp  static_path_publisher.cpp
src/racecar_frenet_cpp/: CMakeLists.txt  package.xml  tuning.txt
src/racecar_frenet_cpp/config/: params.yaml
src/racecar_frenet_cpp/config/config/: params.yaml
src/racecar_frenet_cpp/launch/: frenet.launch.py  frenet_local_planner.launch.py  frenet_with_pp.launch.py  frenet_with_pp_profile.launch.py
src/racecar_frenet_cpp/src/: frenet_local_planner.cpp
src/racecar_teleop_cpp/: CMakeLists.txt  package.xml
src/racecar_teleop_cpp/src/: direct_teleop.cpp  opp_teleop.cpp  teleop_converter.cpp
(+1935 files in other folders)
