<?xml version="1.0"?>
<package format="3">
  <name>racecar_experiments</name>
  <version>0.0.0</version>
  <description>Experimental nodes for F1TENTH (static path, logger, collision monitor, etc.)</description>
  <maintainer email="sunj0321@naver.com">jsun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- build / exec dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>planner_mux_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
